--- a/src/stylesheets/common/_variables.scss
+++ b/src/stylesheets/common/_variables.scss
@@ -55,6 +55,8 @@ $navbar-default-link-active-color: white;
 $navbar-default-toggle-hover-bg: transparent;
 $navbar-default-toggle-border-color: transparent;
 
+$nav-link-padding: 10px 12px;
+
 // Breadcrumbs
 $breadcrumb-padding-vertical: 1em;
 $breadcrumb-padding-horizontal: 0;
